--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ form input[type="text"]:focus {
 tr .remove {
   border: none;
   margin: auto;
-  background-image: url('images/x-circle.svg');
+  background-image: url('../images/x-circle.svg');
   background-color: transparent;
   display: block;
   width: 24px;
@@ -152,7 +152,7 @@ tr:hover .remove {
 .read-tick:hover {
   color: transparent;
   margin: auto;
-  background-image: url('images/check.svg');
+  background-image: url('../images/check.svg');
   background-repeat: no-repeat;
   background-color: transparent;
   cursor: pointer;
@@ -165,7 +165,7 @@ tr:hover .remove {
 .read-cross:hover {
   color: transparent;
   margin: auto;
-  background-image: url('images/cross.svg');
+  background-image: url('../images/cross.svg');
   background-repeat: no-repeat;
   background-color: transparent;
   cursor: pointer;
