--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,16 @@ body {
   color: rgba(1, 1, 1, 0.8);
 }
 
-button, input[type="submit"] {
+button,
+input[type='submit'] {
   font-family: inherit;
   color: white;
   border: none;
   font-weight: bold;
 }
 
-button:focus, input:focus {
+button:focus,
+input:focus {
   outline: none;
 }
 
@@ -67,7 +69,8 @@ tbody tr:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-#new-book, input[type="submit"] {
+#new-book,
+input[type='submit'] {
   background-color: rgb(5, 141, 0);
   margin-top: 1em;
   float: right;
@@ -77,7 +80,8 @@ tbody tr:hover {
   box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
 }
 
-#new-book:hover, input[type="submit"]:hover {
+#new-book:hover,
+input[type='submit']:hover {
   filter: brightness(110%);
 }
 
@@ -102,7 +106,7 @@ form {
   font-size: 1.3em;
 }
 
-form input[type="text"] {
+form input[type='text'] {
   margin: 0.3em 0 1em 0;
   padding: 1em;
   border: none;
@@ -111,12 +115,20 @@ form input[type="text"] {
   font-family: inherit;
 }
 
-form input[type="text"]:hover {
+form input[type='text']:hover {
   box-shadow: 0 0 3px 1px rgba(0, 162, 255, 0.25);
 }
 
-form input[type="text"]:focus {
+form input[type='text']:focus {
   box-shadow: 0 0 3px 1px rgba(0, 162, 255, 0.5);
+}
+
+form input[type='text']:valid {
+  box-shadow: 0 0 3px 1px rgba(0, 255, 0, 0.3);
+}
+
+form input[type='text']:invalid {
+  box-shadow: 0 0 3px 1px rgba(255, 0, 0, 0.3);
 }
 
 /* remove button formatting */
@@ -159,7 +171,8 @@ tr:hover .remove {
   display: block;
   width: 24px;
   height: 24px;
-  filter: invert(19%) sepia(60%) saturate(6985%) hue-rotate(101deg) brightness(94%) contrast(101%);
+  filter: invert(19%) sepia(60%) saturate(6985%) hue-rotate(101deg)
+    brightness(94%) contrast(101%);
 }
 
 .read-cross:hover {
@@ -172,5 +185,6 @@ tr:hover .remove {
   display: block;
   width: 24px;
   height: 24px;
-  filter: invert(8%) sepia(73%) saturate(6095%) hue-rotate(6deg) brightness(97%) contrast(114%);
+  filter: invert(8%) sepia(73%) saturate(6095%) hue-rotate(6deg) brightness(97%)
+    contrast(114%);
 }
